// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders properly when disabled 1`] = `
<ForwardRef(Button)
  color="primary"
  disabled={true}
  onClick={[MockFunction onClick]}
  variant="contained"
>
  Button
</ForwardRef(Button)>
`;

exports[`<Button /> renders properly while loading 1`] = `
<ForwardRef(Button)
  color="primary"
  disabled={true}
  onClick={[MockFunction onClick]}
  startIcon={
    <LoadingIndicator
      size={15}
    />
  }
  variant="contained"
>
  Loading
</ForwardRef(Button)>
`;
